# VoyageVista

./: .gitignore
src/api/: .dockerignore  Dockerfile  README.md  db.py  docker-compose.yml  logger.ini  main.py  migrate_db.py  pyproject.toml  setup_logger.py
src/api/api/: db.py
src/api/api/cruds/: __init__.py  article.py  article_restaurant.py  article_tourist_spot.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  translation.py  user.py
src/api/api/models/: __init__.py  article.py  article_restaurant.py  article_tourist_spot.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  translation.py  user.py
src/api/api/routers/: __init__.py  article.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  (+2 more)
src/api/conf/: postgresql.conf
src/api/cruds/: article.py  article_restaurant.py  article_tourist_spot.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  translation.py  user.py
src/api/models/: article.py  article_restaurant.py  article_tourist_spot.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  translation.py  user.py
src/api/routers/: article.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  translation.py  user.py
src/api/schemas/: __init__.py  article.py  article_restaurant.py  article_tourist_spot.py  cultural_insight.py  feedback.py  photo.py  restaurant.py  tourist_spot.py  translation.py  user.py
src/api/security/: __init__.py  auth.py
src/api/tests/: conftest.py  test_main.py
(+47 files in other folders)
